# keyseebee

./: .gitignore  .gitmodules  LICENSE  README.md
cad/: Makefile  README.md  cutting_pattern.printing.scad  cutting_pattern.stl  fat_mx_plate.printing.scad  fat_mx_plate.stl  functions.scad  plate.2d.scad  plate.scad  plate_left.stl  plate_right.stl
firmware/: Cargo.toml  memory.x
firmware/.cargo/: config
firmware/src/: layout.rs  main.rs
pcb/gerbers/: CHANGELOG.md
pcb/gerbers/v0.1/left/: left-B.Cu.gbl  left-B.Mask.gbs  left-B.SilkS.gbo  left-Edge.Cuts.gm1  left-F.Cu.gtl  left-F.Mask.gts  left-F.SilkS.gto  left-NPTH.drl  left-PTH.drl
pcb/gerbers/v0.4/: left-top-pos.csv  left_bom.csv
pcb/kicad/: fp-lib-table  left-cache.lib  left.bak  left.kicad_pcb  left.kicad_pcb-bak
pcb/kicad/choc-left/: fp-info-cache  fp-lib-table  left-rescue.lib  left.bak  left.kicad_pcb  left.kicad_pcb-bak  left.sch
pcb/kicad/choc-right/: fp-lib-table  right-cache.lib  right.kicad_pcb  right.kicad_pcb-bak  right.sch  sym-lib-table
pcb/kicad/custom.pretty/: CherryMX_Choc_1u.kicad_mod  choc-1.kicad_mod
pcb/kicad/left/: _autosave-left.sch  fp-info-cache  fp-lib-table  left-cache.lib  left-rescue.lib  left.bak  left.kicad_pcb  left.kicad_pcb-bak  left.kicad_prl  left.kicad_pro  left.kicad_sch  left.sch  left.sch-bak  left.xml  sym-lib-table
pcb/kicad/right/: _saved_right.sch  fp-info-cache  fp-lib-table  right-cache.lib  right-rescue.lib  right.bak  right.kicad_pcb  right.kicad_pcb-bak  right.kicad_prl  right.kicad_pro  right.kicad_sch  right.sch  sym-lib-table
(+83 files in other folders)
